scrollIntoView fixed + style

--- a/src/complect/keyboard/Keyboard.scss
+++ b/src/complect/keyboard/Keyboard.scss
@@ -160,6 +160,7 @@
     position: relative;
     cursor: text;
     width: 100%;
+    padding-right: 30px;
 
     &.multiline {
         .input-keyboard-flash-controlled-char-list {
