--- a/src/complect/keyboard/Keyboard.scss
+++ b/src/complect/keyboard/Keyboard.scss
@@ -162,6 +162,7 @@
     cursor: text;
     width: 100%;
     padding-right: 30px;
+    padding-left: 2px;
 
     &.multiline {
         .input-keyboard-flash-controlled-char-list {
