--- a/src/index.scss
+++ b/src/index.scss
@@ -55,6 +55,7 @@ body {
 }
 
 .error-message {
+  --svg-color: var(--color--ko);
   color: var(--color--ko);
 }
 
@@ -130,6 +131,14 @@ textarea {
 
 .full-min-height {
   min-height: 100%;
+}
+
+.full-max-width {
+  max-width: 100%;
+}
+
+.full-max-height {
+  max-height: 100%;
 }
 
 .half-height {
