exec visor fixes

--- a/src/index.scss
+++ b/src/index.scss
@@ -176,6 +176,10 @@ textarea {
     flex-direction: column;
   }
 
+  &.column-reverse {
+    flex-direction: column-reverse;
+  }
+
   &.start {
     justify-content: start;
   }
