--- a/src/complect/keyboard/Keyboard.scss
+++ b/src/complect/keyboard/Keyboard.scss
@@ -165,7 +165,13 @@
     padding-left: 2px;
 
     &.multiline {
+        overflow: hidden;
+
         .input-keyboard-flash-controlled-char-list {
+            height: 100%;
+            overflow-x: hidden;
+            overflow-y: auto;
+
             .input-keyboard-flash-controlled-char-list-inner {
                 white-space: pre-line;
             }
@@ -187,6 +193,8 @@
     }
 
     &.without-close-button {
+        padding-right: 0;
+
         .icon-button-container>.close-button {
             display: none;
         }
@@ -323,6 +331,9 @@
                     margin-left: -1px;
                     white-space: pre;
                     border-right: var(--cursor-border);
+                    min-width: .2em;
+                    vertical-align: bottom;
+                    min-height: 1.3em;
 
                     &.newline-char {
                         display: block;
