cm. scrill into ComFace view + highlight current com

--- a/src/components/apps/cm/col/com/face/ComFace.scss
+++ b/src/components/apps/cm/col/com/face/ComFace.scss
@@ -20,6 +20,10 @@
         padding: 0 .4em;
         margin-bottom: calc(var(--number-border-size) * 2 + 2px);
         cursor: pointer;
+        
+        &.current {
+            font-weight: bold;
+        }
 
         [selected-position].number {
             border-color: var(--color--3);
