--- a/src/complect/brutal-item/BrutalItem.scss
+++ b/src/complect/brutal-item/BrutalItem.scss
@@ -8,4 +8,46 @@
     height: var(--brutal-item-height);
     cursor: pointer;
     margin-top: var(--brutal-item-gap-v);
+
+    >.item-description {
+        position: absolute;
+        display: flex;
+        bottom: 0;
+        justify-content: center;
+        width: 100%;
+        opacity: 0.5;
+        pointer-events: none;
+
+        >.item-description-inner {
+            position: relative;
+            pointer-events: all;
+            white-space: nowrap;
+            width: 80%;
+            overflow: hidden;
+            text-align: center;
+
+            >.item-description-title {
+                display: inline-block;
+                text-align: right;
+                overflow: hidden;
+                vertical-align: middle;
+                max-width: 100%;
+
+                &:after {
+                    content: "";
+                    position: absolute;
+                    left: -1.3em;
+                    bottom: 0;
+                    height: 1em;
+                    width: 2.5em;
+                    background: linear-gradient(to left, transparent, var(--color--2) 50%);
+                }
+
+                >.item-description-title-inner {
+                    white-space: nowrap;
+                    float: right;
+                }
+            }
+        }
+    }
 }
