--- a/src/components/apps/cm/translation/Translation.scss
+++ b/src/components/apps/cm/translation/Translation.scss
@@ -54,7 +54,7 @@
         overflow-x: hidden;
         overflow-y: auto;
 
-        .com-face.current {
+        .face-item.current {
             font-weight: bold;
         }
     }
