--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 body {
-  --font-family: -apple-system, montserrat, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', main,
-    sans-serif;
+  --font-family: -apple-system, montserrat, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", main, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -59,8 +59,8 @@ body {
   color: var(--color--ko);
 }
 
-input[type='radio'],
-input[type='button'] {
+input[type="radio"],
+input[type="button"] {
   cursor: pointer;
 }
 
@@ -78,7 +78,7 @@ input[type='button'] {
 
 .disabled,
 :disabled {
-  opacity: .5;
+  opacity: 0.5;
   pointer-events: none;
 }
 
@@ -94,6 +94,14 @@ input[type='button'] {
 
 .nowrap {
   white-space: nowrap;
+}
+
+.white-pre {
+  white-space: pre;
+
+  &-line {
+    white-space: pre-line;
+  }
 }
 
 .over-hidden {
@@ -190,11 +198,11 @@ textarea {
 }
 
 .after-margin-space {
-  margin-right: .2em;
+  margin-right: 0.2em;
 }
 
 .text-middle {
-  >* {
+  > * {
     display: inline-block;
     vertical-align: middle;
   }
@@ -268,7 +276,7 @@ textarea {
 }
 
 .inactive {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 ::-webkit-scrollbar {
