--- a/src/index.scss
+++ b/src/index.scss
@@ -195,6 +195,10 @@ textarea {
   &.start {
     justify-content: start;
   }
+
+  &.flex-end {
+    justify-content: end;
+  }
 }
 
 .after-margin-space {
