Dropdown.styles. fixed

--- a/src/complect/dropdown/Dropdown.scss
+++ b/src/complect/dropdown/Dropdown.scss
@@ -1,45 +1,53 @@
 .dropdown-selector {
-    --selector-height: 40px;
+  --selector-height: 40px;
 
-    position: relative;
-    z-index: 300;
-    min-width: 50px;
+  position: relative;
+  min-width: 50px;
+  width: 100%;
+  height: var(--selector-height);
+  padding: 10px;
+  border-radius: 5px;
+  background-color: var(--color--2);
+  cursor: pointer;
+  z-index: 300;
+
+  + .dropdown-selector {
+    z-index: 299;
+
+    + .dropdown-selector {
+      z-index: 298;
+    }
+  }
+
+  &.dropped {
+    border-radius: 5px 5px 0 0;
+
+    > .item-list {
+      max-height: 30vh;
+    }
+  }
+
+  > .item-list {
+    position: absolute;
+    top: var(--selector-height);
+    left: 0;
     width: 100%;
-    height: var(--selector-height);
-    padding: 10px;
-    border-radius: 5px;
-    background-color: var(--color--2);
-    cursor: pointer;
+    background-color: var(--color--3);
+    color: var(--color--1);
+    max-height: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: max-height 0.2s linear;
+    border-radius: 0 0 5px 5px;
 
-    &.dropped {
-        border-radius: 5px 5px 0 0;
+    > .list-item {
+      padding: 5px;
 
-        >.item-list {
-            max-height: 30vh;
+      &.colored {
+        &.color_ko {
+          color: var(--color--ko);
         }
+      }
     }
-
-    >.item-list {
-        position: absolute;
-        top: var(--selector-height);
-        left: 0;
-        width: 100%;
-        background-color: var(--color--3);
-        color: var(--color--1);
-        max-height: 0;
-        overflow-x: hidden;
-        overflow-y: auto;
-        transition: max-height .2s linear;
-        border-radius: 0 0 5px 5px;
-
-        >.list-item {
-            padding: 5px;
-
-            &.colored {
-                &.color_ko {
-                    color: var(--color--ko);
-                }
-            }
-        }
-    }
+  }
 }
