--- a/src/index.scss
+++ b/src/index.scss
@@ -50,9 +50,11 @@ body {
 
 .color-- {
   &1 {
+    --svg-color: var(--color--1);
     color: var(--color--1);
   }
   &3 {
+    --svg-color: var(--color--3);
     color: var(--color--3);
   }
   &7 {
@@ -176,7 +178,6 @@ textarea {
 .full-max-width {
   max-width: 100%;
 }
-
 
 .min-width-90 {
   min-width: 90%;
@@ -320,8 +321,13 @@ textarea {
   overscroll-behavior: none;
 }
 
-.pointer {
+.pointer,
+.pointer-children > * {
   cursor: pointer;
+}
+
+.text-height-block {
+  height: 1.3em;
 }
 
 .relative {
