--- a/src/index.scss
+++ b/src/index.scss
@@ -278,14 +278,23 @@ textarea {
 
 .absolute {
   position: absolute;
+
+  &.full-fill {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .relative {
   position: relative;
 }
 
-.fade-05 {
-  opacity: 0.5;
+@for $i from 1 through 9 {
+  .fade-0#{$i} {
+    opacity: $i / 10;
+  }
 }
 
 .absolute,
