--- a/src/components/apps/cm/translation/Translation.scss
+++ b/src/components/apps/cm/translation/Translation.scss
@@ -146,7 +146,7 @@
         z-index: 1000;
         transition: transform .1s;
 
-        &.rotate {
+        &.rotate-fullscreen-translation {
             transform: rotate(90deg);
             width: 100vh;
             height: 100vw;
