leader. game-team-passport

--- a/src/index.scss
+++ b/src/index.scss
@@ -497,6 +497,10 @@ input:-webkit-autofill:active {
 
 .rotate {
   animation: rotate 1s linear infinite;
+
+  &-90 {
+    transform: rotate(90deg);
+  }
 }
 
 @keyframes rotate {
