leader. game timer fields

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -45,6 +45,10 @@
         margin-bottom: var(--main-big-gap);
     }
 
+    .margin-big-gap-b {
+        margin-bottom: var(--main-big-gap);
+    }
+
     .margin-big-gap-h {
         margin-left: var(--main-big-gap);
         margin-right: var(--main-big-gap);
