--- a/src/complect/keyboard/Keyboard.scss
+++ b/src/complect/keyboard/Keyboard.scss
@@ -167,6 +167,17 @@
     padding-right: 30px;
     padding-left: 2px;
 
+    .native-input {
+        width: 100%;
+        height: 100%;
+        resize: none;
+        color: var(--color--6);
+
+        &::placeholder {
+            color: var(--color--4);
+        }
+    }
+
     &.multiline {
         overflow: hidden;
 
