--- a/src/components/apps/cm/col/com/chord-card/ChordCard.scss
+++ b/src/components/apps/cm/col/com/chord-card/ChordCard.scss
@@ -1,43 +1,56 @@
-.chord-zero-line {
-    fill: none;
-    stroke: #ffdfad;
-    stroke-width: 3px;
-}
-
-.chord-string {
-    fill: none;
-    stroke: #f2b148;
-}
-
-.chord-lad {
-    fill: none;
-    stroke: #f4f0e8;
-}
-
 .chord-application {
-    margin-top: 1em;
-}
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 7px;
+    margin-top: 40px;
 
-.chord-board {
-    position: relative;
-    background-color: #634008;
-    display: inline-block;
-    vertical-align: middle;
-}
+    .chord-board {
+        position: relative;
+        background-color: var(--color--2);
+        display: inline-block;
+        vertical-align: middle;
+        border-radius: 10px;
 
-.chord-point {
-    stroke-linecap: round;
-    stroke-width: 12px;
-    stroke: red;
+        .chord-zero-line {
+            fill: none;
+            stroke: var(--color--1);
+            stroke-width: 10px;
+        }
 
-    &.shadow {
-        stroke: grey;
+        .chord-string {
+            fill: none;
+            stroke: var(--color--3);
+        }
+
+        .chord-lad {
+            fill: none;
+            stroke: var(--color--4);
+            stroke-width: 2px;
+        }
+
+        .chord-lad-number {
+            font-size: 30px;
+            font-weight: bolder;
+            fill: var(--color--3);
+            opacity: 0.3;
+        }
+
+        .chord-point {
+            stroke-linecap: round;
+            stroke-width: 12px;
+            stroke: var(--color--7);
+
+            &.shadow {
+                stroke: grey;
+            }
+        }
+
+        .first-lad-counter {
+            font-size: 1em;
+            margin-right: .5em;
+            display: inline-block;
+            vertical-align: middle;
+        }
     }
-}
-
-.first-lad-counter {
-    font-size: 1em;
-    margin-right: .5em;
-    display: inline-block;
-    vertical-align: middle;
 }
