--- a/src/front/complect/qr-code/QRCode.scss
+++ b/src/front/complect/qr-code/QRCode.scss
@@ -19,5 +19,9 @@
             display: flex;
             opacity: .9;
         }
+
+        .qr-code {
+            width: 90vmin;
+        }
     }
 }
