--- a/src/front/app/App.scss
+++ b/src/front/app/App.scss
@@ -73,6 +73,10 @@ body {
         --keyboard-flash-height: 30vh;
         --footer-height: 0px;
         --footer-opacity: 0;
+
+        .phase-container > .content {
+            padding-bottom: var(--keyboard-flash-height);
+        }
     }
 
     .application-container {
