Cm.Com. can switch isMiniAnchor flag

--- a/src/front/components/apps/cm/col/com/block-styles/BlockStyles.scss
+++ b/src/front/components/apps/cm/col/com/block-styles/BlockStyles.scss
@@ -103,5 +103,10 @@
         &.p-two {
             font-style: var(--font-style);
         }
+        
+        &.anchor {
+            color: grey;
+            margin: 10px 10px 10px 0;
+        }
     }
 }
