--- a/src/front/components/apps/cm/editor/Editor.scss
+++ b/src/front/components/apps/cm/editor/Editor.scss
@@ -13,6 +13,12 @@
         resize: none;
         color: var(--text-color);
     }
+
+    .parse-com-data-button {
+        --size: 50px;
+        width: var(--size);
+        height: var(--size);
+    }
 }
 
 .orders-redactor {
